# OP2Utility

./: .appveyor.yml  .cppinclude.json  .gitignore  .travis.yml  CMakeLists.txt  FileWriteFlags.h  License.txt  MapData.cpp  MapData.h  OP2Utility License - MIT.txt  OP2Utility.h  OP2Utility.sln  OP2Utility.vcxproj  OP2Utility.vcxproj.filters  ReadMe.md  ResourceManager.cpp  ResourceManager.h  StreamReader.cpp  StreamReader.h  StreamWriter.cpp  StreamWriter.h  StringHelper.cpp  StringHelper.h  XFile.cpp  XFile.h  makefile
.circleci/: Dockerfile  config.yml
Archives/: AdaptHuffTree.cpp  AdaptHuffTree.h  ArchiveFile.cpp  ArchiveFile.h  ArchivePacker.cpp  ArchivePacker.h  ArchiveUnpacker.cpp  ArchiveUnpacker.h  BitStream.cpp  BitStream.h  ClmFile.cpp  ClmFile.h  HuffLZ.cpp  HuffLZ.h  MemoryMappedFile.cpp  MemoryMappedFile.h  VolFile.cpp  VolFile.h  WaveFile.h
Maps/: CellType.h  ClipRect.h  MapData.cpp  MapData.h  MapHeader.h  MapReader.cpp  MapReader.h  MapWriter.cpp  MapWriter.h  TerrainType.h  TileData.h  TileGroup.h  TileInfo.h  TileSetSource.cpp  TileSetSource.h
OP2Maps/: MapData.cpp  MapData.h  MapHeader.cpp  MapHeader.h  TerrainType.h  TileInfo.h  TileSetSource.h
OP2Utility/: ArchiveHelper.cpp  ArchiveHelper.h  MapData.cpp  MapData.h  OP2Utility.h  OP2Utility.vcxproj  OP2Utility.vcxproj.filters  ResourceManager.cpp  ResourceManager.h  StreamReader.cpp  StreamReader.h  StringHelper.cpp  StringHelper.h  XFile.cpp  XFile.h
OP2Utility/Archives/: AdaptHuffTree.cpp  AdaptHuffTree.h  ArchiveFile.cpp  ArchiveFile.h  BitStream.cpp  BitStream.h  CAdaptHuffTree.cpp  CAdaptHuffTree.h  CArchiveFile.cpp  CArchiveFile.h  CBitStream.cpp  CBitStream.h  CClmFile.cpp  CClmFile.h  CHuffLZ.cpp  CHuffLZ.h  CVolFile.cpp  CVolFile.h  ClmFile.cpp  ClmFile.h  CompressionType.h  HuffLZ.cpp  HuffLZ.h  VolFile.cpp  VolFile.h
Streams/: FileSliceReader.cpp  FileSliceReader.h  FileStreamReader.cpp  FileStreamReader.h  FileStreamWriter.cpp  FileStreamWriter.h  MemoryStreamReader.cpp  MemoryStreamReader.h  MemoryStreamWriter.cpp  MemoryStreamWriter.h  SeekableStreamReader.h  SeekableStreamWriter.h  StreamReader.h  StreamWriter.cpp  StreamWriter.h
include/: OP2Utility.h
src/: BitTwiddle.cpp  BitTwiddle.h  Point.h  Rect.h  ResourceManager.cpp  ResourceManager.h  StringHelper.cpp  StringHelper.h  StringUtility.cpp  StringUtility.h  Tag.h  XFile.cpp  XFile.h
src/Archive/: AdaptiveHuffmanTree.cpp  AdaptiveHuffmanTree.h  ArchiveFile.cpp  ArchiveFile.h  ArchivePacker.cpp  ArchivePacker.h  ArchiveUnpacker.cpp  ArchiveUnpacker.h  BitStreamReader.cpp  BitStreamReader.h  ClmFile.cpp  ClmFile.h  CompressionType.h  HuffLZ.cpp  HuffLZ.h  VolFile.cpp  VolFile.h  WaveFile.cpp  WaveFile.h
src/Archives/: AdaptHuffTree.cpp  AdaptHuffTree.h  AdaptiveHuffmanTree.cpp  AdaptiveHuffmanTree.h  ArchivePacker.cpp  ArchivePacker.h  ArchiveUnpacker.cpp  ArchiveUnpacker.h  BitStream.cpp  BitStream.h  BitStreamReader.cpp  BitStreamReader.h  ClmFile.cpp  ClmFile.h  CompressionType.h  HuffLZ.cpp  HuffLZ.h  VolFile.cpp  VolFile.h  WaveFile.cpp  WaveFile.h
src/Bitmap/: BitmapFile.cpp  BitmapFile.h  BmpCompression.h  BmpHeader.cpp  BmpHeader.h  Color.cpp  Color.h  ImageHeader.cpp  ImageHeader.h  IndexedBmpReader.cpp  IndexedBmpWriter.cpp
src/Bitmaps/: BitmapFile.cpp  BitmapFile.h  BmpHeader.cpp  BmpHeader.h  ImageHeader.cpp  ImageHeader.h  IndexedBmpReader.cpp  IndexedBmpWriter.cpp  IndexedBmpWriter.h
src/Map/: CellType.h  Map.cpp  Map.h  MapHeader.cpp  MapHeader.h  MapReader.cpp  MapWriter.cpp  SavedGameDataSection2.cpp  SavedGameDataSection2.h  SavedGameUnits.cpp  SavedGameUnits.h  TerrainType.h  Tile.h  TileGroup.h  TileInfo.h  TileMapping.h  TilesetSource.h
src/Maps/: CellType.h  ClipRect.h  Map.h  MapData.cpp  MapData.h  MapHeader.cpp  MapHeader.h  MapReader.cpp  MapReader.h  MapType.h  MapWriter.cpp  MapWriter.h  TerrainType.h  TileData.h  TileGroup.h  TileInfo.h  TileSetSource.h  TilesetSource.h
src/Sprite/: Animation.h  ArtFile.cpp  ArtFile.h  ArtReader.cpp  ArtWriter.cpp  ImageMeta.h  OP2BmpLoader.cpp  OP2BmpLoader.h  OP2SpriteLoader.cpp  OP2SpriteLoader.h  PaletteHeader.cpp  PaletteHeader.h  SectionHeader.cpp  SectionHeader.h  SpriteLoader.cpp  SpriteLoader.h  TilesetCommon.cpp  TilesetCommon.h  TilesetHeaders.cpp  TilesetHeaders.h  TilesetLoader.cpp  TilesetLoader.h
src/Sprites/: Animation.h  ArtFile.cpp  ArtFile.h  ArtReader.cpp  ArtReader.h  ArtWriter.cpp  ArtWriter.h  BitCount.h  BmpHeader.cpp  BmpHeader.h  Color.cpp  Color.h  ImageHeader.cpp  ImageHeader.h  ImageMeta.h  ImageType.h  IndexedBmpWriter.cpp  IndexedBmpWriter.h  OP2BmpLoader.cpp  OP2BmpLoader.h  PaletteHeader.cpp  PaletteHeader.h  SectionHeader.h
src/Stream/: BiDirectionalSeekableReader.h  BiDirectionalSeekableWriter.h  BidirectionalReader.cpp  BidirectionalReader.h  BidirectionalWriter.cpp  BidirectionalWriter.h  DynamicMemoryWriter.cpp  DynamicMemoryWriter.h  FileReader.cpp  FileReader.h  FileSliceReader.cpp  FileSliceReader.h  FileWriter.cpp  FileWriter.h  ForwardReader.cpp  ForwardReader.h  ForwardSeekableReader.h  ForwardSeekableWriter.h  ForwardWriter.cpp  ForwardWriter.h  MemoryReader.cpp  MemoryReader.h  MemoryWriter.cpp  MemoryWriter.h  Reader.cpp  Reader.h  ReaderSlice.h  SeekableReader.h  SliceReader.h  Writer.cpp  Writer.h
src/Streams/: FileReader.cpp  FileSliceReader.cpp  FileSliceReader.h  FileStreamReader.cpp  FileStreamReader.h  FileStreamWriter.cpp  FileStreamWriter.h  FileWriter.cpp  FileWriter.h  MemoryReader.cpp  MemoryReader.h  MemoryStreamReader.cpp  MemoryStreamReader.h  MemoryStreamWriter.cpp  MemoryStreamWriter.h  MemoryWriter.cpp  MemoryWriter.h  Reader.h  SeekableReader.h  SeekableStreamReader.h  SeekableStreamWriter.h  SeekableWriter.h  StreamReader.h  StreamWriter.cpp  StreamWriter.h  Writer.h
test/: BitTwiddle.test.cpp  Main.cpp  MasterInclude.test.cpp  OP2UtilityTest.vcxproj  OP2UtilityTest.vcxproj.filters  Rect.test.cpp  ResourceManager.test.cpp  StringUtility.test.cpp  Tag.test.cpp  XFile.test.cpp  packages.config
test/Archive/: AdaptiveHuffmanTree.test.cpp  ArchiveFile.test.cpp
test/Map/: Map.test.cpp  (+5 more)
(+48 files in other folders)
